# cdf_mm_exp

./: .gitignore  .gitmodules  README.md  conda_pkgs.txt
mm_msg/: CMakeLists.txt  package.xml
mm_msg/msg/: SolverInput.msg  State.msg  TargetTrajectories.msg
mm_ros_control/: CMakeLists.txt  mm_ros_control_plugin.xml  package.xml
mm_ros_control/config/: config.yaml  model_size.info  para copy.info  para.info
mm_ros_control/config/mpc/: task.info  task_arm.info  task_arm_bk.info
mm_ros_control/config/task_space_action_server/: swerve_base.yaml
mm_ros_control/include/: CRISP_Solver.hpp  LoadData.h  SwerveModelInfo.hpp  SwerveTarget.hpp  SystemObservation.h  Types.h  crop_sphere.hpp  map_util.hpp
mm_ros_control/include/mm_ros_control/: mm_ros_control.hpp
mm_ros_control/scripts/: keyboard_control.py  piont.py
mm_ros_control/src/: SwerveModelInfo.cpp  SwerveTarget.cpp  map_util.cpp  mm_ros_control.cpp
mm_visualize/: CMakeLists.txt  package.xml
mm_visualize/include/mm_visualize/: mm_config.hpp
mm_visualize/src/: mm_config.cpp
odometry_controller/: CMakeLists.txt  package.xml
odometry_controller/config/: config.yaml
odometry_controller/include/odometry_controller/: odometry_controller.h
odometry_controller/src/: odom_test.py  odometry_controller.cpp
swerve_control/: CMakeLists.txt  package.xml
swerve_control/config/: joint_state_controller.yaml
swerve_control/launch/: bag_play.launch  highlevel_controller.launch  holo_arm_hw.launch  holo_simulation_arm.launch  hw.launch  master.launch  opc.launch  random_world.launch  soft.launch
swerve_control/rviz/: bag.rviz  swerve.rviz
swerve_description/: CMakeLists.txt
swerve_description/launch/: gazebo.launch
swerve_description/scripts/: create_path.py
swerve_description/urdf/: display.launch  gazebo.launch  holonomic_mm_arm.urdf.xacro  whole_robot_with_gripper.urdf  whole_robot_with_gripper.xacro
swerve_description/urdf/gripper/: ag95.xacro  ag95_gazebo.xacro  ag95_macro.xacro
